--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Sample Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body class="d-flex flex-column align-items-center w-100">
+    <!-- header -->
+    <header id="sample-header" class="w-75">
+        <h1 id="page-title" class="text-center py-4 border rounded-bottom-4">Sample Website</h1>
+    </header>
     
+    <!-- main body -->
+    <main id="main-content" class="my-5 mx-5 p-4">
+        <div class="image-and-text d-flex flex-row align-items-center mb-5">
+            <img class="me-5" src="https://placehold.co/275x200" alt="placeholder image">
+            <p class="image-text w-50 lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Pellentesque eu mattis neque, vitae bibendum felis. 
+                Integer malesuada eros nisi, ac blandit massa rhoncus vel. 
+                Nam eu congue urna. Nulla facilisi. Etiam faucibus lectus orci, vel rutrum eros scelerisque ac. 
+                Sed ultrices tincidunt ex eu finibus. Vivamus cursus egestas odio, ut porta mauris condimentum vitae. 
+                Donec aliquet risus a odio laoreet, eu egestas elit pretium.</p>
+        </div>
+
+        <div class="image-and-text d-flex flex-row align-items-center justify-content-end mb-5">
+            <p class="image-text w-50 lh-lg text-end">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Pellentesque eu mattis neque, vitae bibendum felis. 
+                Integer malesuada eros nisi, ac blandit massa rhoncus vel. 
+                Nam eu congue urna. Nulla facilisi. Etiam faucibus lectus orci, vel rutrum eros scelerisque ac. 
+                Sed ultrices tincidunt ex eu finibus. Vivamus cursus egestas odio, ut porta mauris condimentum vitae. 
+                Donec aliquet risus a odio laoreet, eu egestas elit pretium.</p>
+            <img class="ms-5" src="https://placehold.co/275x200" alt="placeholder image">
+        </div>
+
+        <div class="image-and-text d-flex flex-row align-items-center mb-5">
+            <img class="me-5" src="https://placehold.co/275x200" alt="placeholder image">
+            <p class="image-text w-50 lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Pellentesque eu mattis neque, vitae bibendum felis. 
+                Integer malesuada eros nisi, ac blandit massa rhoncus vel. 
+                Nam eu congue urna. Nulla facilisi. Etiam faucibus lectus orci, vel rutrum eros scelerisque ac. 
+                Sed ultrices tincidunt ex eu finibus. Vivamus cursus egestas odio, ut porta mauris condimentum vitae. 
+                Donec aliquet risus a odio laoreet, eu egestas elit pretium.</p>
+        </div>
+    </main>
+    <!-- carousel -->
+    <!-- other text -->
+    <!-- partners -->
+    <!-- contact form -->
+    <!-- footer -->
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
