--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sample Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="d-flex flex-column align-items-center w-100">
+<body class="w-100 d-flex flex-column align-items-center">
 
     <!-- header -->
     <header id="sample-header" class="w-75 mb-5">
@@ -15,7 +15,7 @@
     </header>
     
     <!-- main body -->
-    <main id="main-content" class="my-5 mx-5 p-4">
+    <main id="main-content" class="my-5 mx-5 p-4 d-flex flex-column align-items-center">
 
         <!-- image and text -->
         <div class="mb-5">
@@ -93,7 +93,7 @@
         </div>
 
         <!-- other text -->
-        <div id="sectioned-text" class="d-flex flex-row justify-content-around">
+        <div id="sectioned-text" class="d-flex flex-row justify-content-around mb-5">
             <div id="text-section" class="d-flex flex-column align-items-center w-25">
                 <h4 id="section-head" class="mb-3">Section Head</h4>
                 <p id="section-body" class="lh-lg font-18">
@@ -115,12 +115,96 @@
                 </p>
             </div>
         </div>
+
+        <!-- partners -->
+        <div id="partners-container" class="container-fluid text-center">
+            <p id="partners-text">Trusted by many partners</p>
+            <div id="partners-section" class="d-flex flex-row justify-content-around border-top border-bottom border-black">
+                <img class="opacity-75" src="./img/a14d545a90f3e8e62e8596f443578c06.png" alt="sample logo">
+                <img class="opacity-75" src="./img/e95785641259c5ed6490954c211d4078.png" alt="sample logo">
+                <img class="opacity-75" src="./img/kisspng-dhahran-saudi-aramco-logo-petroleum-0-saudi-5ac523d486b410.1666834415228692045518.png" alt="sample logo">
+                <img class="opacity-75" src="./img/08e17aea8bd67f6209260f9f3be0d101.png" alt="sample logo">
+            </div>
+        </div>
+
+        <!-- contact form -->
+        <div id="form-container" class="d-flex flex-column align-items-center w-75">
+            <h4 id="form-header" class="my-5">Questions? Leave them below!</h4>
+            <form class="w-100">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We will never share your information with anyone.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="subject" class="form-label">Subject:</label>
+                    <input type="text" class="form-control" id="subject">
+                </div>
+                <div class="mb-3">
+                    <label for="message-textarea" class="form-label">Message:</label>
+                    <textarea class="form-control" name="message-textarea" id="message-textarea" placeholder="Leave your message here."></textarea>
+                </div>
+                <button id="form-button" type="submit" class="btn mt-2">Submit</button>
+            </form>
+        </div>
     </main>
 
-    
-    <!-- partners -->
-    <!-- contact form -->
     <!-- footer -->
+    <footer class="w-100 mt-5 pt-5">
+        <div id="footer-lists-container" class="d-flex flex-row justify-content-around">
+            <ul id="explore-list" class="footer-list lh-lg">
+                <h4>Explore</h4>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+            </ul>
+
+            <ul id="careers-list" class="footer-list lh-lg">
+                <h4>Careers</h4>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+            </ul>
+
+            <ul id="products-list" class="footer-list lh-lg">
+                <h4>Products</h4>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="#">Lorem ipsum dolor sit amet</a>
+                </li>
+            </ul>
+        </div>
+
+        <div id="copyright-container" class="text-center mt-5">
+            <p id="copyright">&copy; Your Business 2024</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
